Fix underline pixel gap

--- a/src/components/Text/styles.module.scss
+++ b/src/components/Text/styles.module.scss
@@ -7,7 +7,7 @@
 .hover_underline_animation:after {
   content: '';
   position: absolute;
-  width: 100%;
+  width: 100.2%;
   transform: scaleX(0);
   height: 2px;
   bottom: 0;
